# streamlit-sortable-multiselect

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  apm.lock.yaml  apm.yml  pyproject.toml
examples/: api_suggestions.py  basic.py
streamlit_sortable_multiselect/: __init__.py
streamlit_sortable_multiselect/frontend/: index.html  package-lock.json  package.json  vite.config.ts
streamlit_sortable_multiselect/frontend/src/: App.test.tsx  App.tsx  main.tsx  style.css
tests/: test_wrapper.py
